; Integration tests: build binaries with the system toolchain (see the rules
; in ../fixtures/dune) and verify durin can read them back. They are sensitive
; to the toolchain version, so they run under the `integration` alias rather
; than `runtest`:
;   dune build @integration

(executables
 (names
  test_debug_line
  test_dwarf4_integration
  test_debug_macro_integration
  test_debug_aranges_integration
  test_debug_str_integration
  test_debug_line_str_integration
  test_debug_loclists_integration
  test_debug_rnglists_integration
  test_debug_str_offsets_integration
  test_debug_addr_integration
  test_debug_frame_integration
  test_eh_frame_integration
  test_debug_line_integration
  test_debug_info_integration
  test_debug_abbrev_integration
  test_debug_pubnames_integration
  test_debug_names_integration)
 (libraries durin object alcotest cmdliner test_helpers))

(rule
 (alias integration)
 (deps ../fixtures/hello_world)
 (enabled_if
  (and
   (= %{system} "macosx")
   (= %{architecture} "arm64")))
 (action
  (run %{exe:test_debug_line.exe} --binary %{dep:../fixtures/hello_world})))

(rule
 (alias integration)
 (deps ../fixtures/dwarf4_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_dwarf4_integration.exe}
   --binary
   %{dep:../fixtures/dwarf4_linux})))

(rule
 (alias integration)
 (deps ../fixtures/test_macros_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_macro_integration.exe}
   --binary
   %{dep:../fixtures/test_macros_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_aranges_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_str_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_line_str_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_linux})))

(rule
 (alias integration)
 (deps ../fixtures/loclists_rnglists_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_loclists_integration.exe}
   --binary
   %{dep:../fixtures/loclists_rnglists_linux})))

(rule
 (alias integration)
 (deps ../fixtures/loclists_rnglists_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_rnglists_integration.exe}
   --binary
   %{dep:../fixtures/loclists_rnglists_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_clang_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_str_offsets_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_clang_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_clang_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_addr_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_clang_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_debug_frame_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_frame_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_debug_frame_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_eh_frame_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_line_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_info_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_abbrev_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_pubnames_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_pubnames_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_pubnames_linux})))

(rule
 (alias integration)
 (deps ../fixtures/hello_world_debug_names_linux)
 (enabled_if
  (and
   (= %{system} "linux")
   (= %{architecture} "amd64")))
 (action
  (run
   %{exe:test_debug_names_integration.exe}
   --binary
   %{dep:../fixtures/hello_world_debug_names_linux})))
